# inspect_ai_benchmarks

./: LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: mmlu.py
tests/: mmlu.py
